--- a/原型与原型链.md
+++ b/原型与原型链.md
@@ -64,4 +64,4 @@
 
 ![](https://user-gold-cdn.xitu.io/2019/10/31/16e20167d711bd58?w=589&h=424&f=png&s=29558)
 
-来我们仔细看一下蓝色的的线，体i现了原型链。
+来我们仔细看一下蓝色的的线，体现了原型链。
